# hyprnote

./: Cargo.toml  Encryption-progress.md  Encryption.md  pnpm-lock.yaml
.github/actions/pnpm_install/: action.yaml
.github/actions/rust_install/: action.yaml
.github/workflows/: app_ci.yaml  desktop_cd.yaml  desktop_cd2.yaml  desktop_ci.yaml
apps/desktop/: package.json  test-cicd-changes.txt
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/contexts/: encryption.tsx
apps/desktop/src/mocks/: tauri.ts
crates/encryption/: Cargo.toml
crates/encryption/src/: crypto.rs  db_crypto.rs  error.rs  file_crypto.rs  key_manager.rs  lib.rs
plugins/encryption/: Cargo.toml  build.rs  package.json  tsconfig.json
plugins/encryption/js/: bindings.gen.ts  index.ts
plugins/encryption/src/: commands.rs  error.rs  ext.rs  lib.rs  store.rs
