[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
password-hash = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
aes-gcm = "0.10.3"
zeroize = { version = "1.6.0", features = ["derive"] }
secrecy = "0.8.0"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
